--- a/ICLReader.html
+++ b/ICLReader.html
@@ -16,12 +16,15 @@
       var time = 0;
       var fps = 60;
       var timeMax = 10 * fps;
+
       var timeBox;
       var timeSlide;
+      var timePlay;
 
       var projector;
       var fieldSVG;
-      var unit2Px = (window.innerHeight <= window.innerWidth) ? (window.innerHeight / 5) : (window.innerWidth / 5);
+      var unit2Px = (window.innerHeight <= window.innerWidth) ?
+                    (window.innerHeight / 5) : (window.innerWidth / 5);
       var center = [unit2Px * 2, unit2Px * 2];
       var touristNum = 0;
 
@@ -31,12 +34,15 @@
       var graphSVG;
       var graphDots = [];
 
+      var lineFx = d3.line().x((d) => {return(d.x);}).y((d) => {return(d.y);});
       var tourLines = [];
+      var tourLine = [];
       var graphLines = [];
+      var graphLine = [];
 
       var exitAngle = 0;
       var fieldExit = [center[0] + unit2Px * Math.cos(exitAngle * (Math.PI / 180)),
-                     center[1] + unit2Px * Math.sin(exitAngle * (Math.PI / 180))];
+                       center[1] + unit2Px * Math.sin(exitAngle * (Math.PI / 180))];
       var wireless = true;
       var instruBinder = [
                           [[0, [45]], [2, ['left']]],
@@ -64,10 +70,10 @@
         time = Math.round((mousePos / ((31 / 8) * unit2Px)) * timeMax);
         for (i = 0; i < touristNum; i++) {
           var who = tourists[i];
-          who.x = tourLines[i][time].attr("x1");
-          who.y = tourLines[i][time].attr("y1");
+          who.x = tourLines[i][time].x;
+          who.y = tourLines[i][time].y;
           who.visual.attr("cx", who.x).attr("cy", who.y);
-          graphDots[i].attr("cx", graphLines[i][time].attr("x1")).attr("cy", graphLines[i][time].attr("y1"));
+          graphDots[i].attr("cx", graphLines[i][time].x).attr("cy", graphLines[i][time].y);
         }
       }
       function ESlide() {
@@ -265,10 +271,13 @@
         }
         fieldSVG.append("circle").attr("cx", center[0]).attr("cy", center[1]).attr("r", 2).style("fill", "#000000");
         fieldSVG.append("circle").attr("cx", fieldExit[0]).attr("cy", fieldExit[1]).attr("r", 2).style("fill", "#000000");
-        timeBox = fieldSVG.append("rect").attr("width", unit2Px / 8).attr("height", unit2Px / 8).style("fill-opacity", 0.0).style("stroke", "#000000");
+        timeBox = fieldSVG.append("rect").attr("width", unit2Px / 8).attr("height", unit2Px / 8)
+                          .style("fill-opacity", 0.0).style("stroke", "#000000");
         timeSlide = fieldSVG.append("rect").attr("width", unit2Px / 8).attr("height", unit2Px / 8)
                     .attr("visibility", "hidden").style("fill", "#888888")
                     .call(d3.drag().on("start", SSlide).on("drag", MSlide).on("end", ESlide));
+        timePlay = fieldSVG.append("rect").attr("y", unit2Px / 8).attr("width", unit2Px / 4).attr("height", unit2Px / 8)
+                           .style("fill", "#00ff00").on("click", () => {projector = setInterval(PlayAnim, 1000 / fps);});
         projector = setInterval(LoadAnim, 1000 / fps);
       }
 
@@ -279,7 +288,7 @@
         RGB[1] = Math.floor(Math.random() * 256).toString(16);
         RGB[2] = Math.floor(Math.random() * 256).toString(16);
         for (j = 0; j < 3; j++) {if (RGB[j].length == 1) {RGB[j] = '0' + RGB[j];}}
-        return(RGB[0] + RGB[1] + RGB[2]);
+        return('#' + RGB[0] + RGB[1] + RGB[2]);
       }
 
 //Control times, and update bots
@@ -300,25 +309,43 @@
         }
       }
 
-//Create lines, and update graph dot positions.
+//Create lines, and update graph dot positions, as well recreating image of path.
       function LoadLines(i) {
         var dista = unit2Px * 4 - Math.sqrt(Math.pow(fieldExit[0] - tourists[i].x, 2) + Math.pow(fieldExit[1] - tourists[i].y, 2))
-        graphDots[i].attr("cx", (time / timeMax) * (31 / 8) * unit2Px).attr("cy", dista);
-        var tourHold;
-        var graphHold;
+        graphDots[i].attr("cx", (time / timeMax) * 4 * unit2Px).attr("cy", dista);
         if (time > 0) {
-          tourHold = [tourLines[i][time - 1].attr("x2"), tourLines[i][time - 1].attr("y2")];
-          graphHold = [graphLines[i][time - 1].attr("x2"), graphLines[i][time - 1].attr("y2")];
+          tourLines[i].push({x:tourists[i].x, y:tourists[i].y});
+          tourLine[i].remove();
+          tourLine[i] = fieldSVG.append("path").attr("d", lineFx(tourLines[i]))
+                        .style("stroke", tourColors[i]).style("stroke-width", 3).style("stroke-opacity", 0.5).style("fill", "none");
+          graphLines[i].push({x:graphDots[i].attr("cx"), y:graphDots[i].attr("cy")});
+          graphLine[i].remove();
+          graphLine[i] = graphSVG.append("path").attr("d", lineFx(graphLines[i]))
+                         .style("stroke", tourColors[i]).style("stroke-width", 3).style("stroke-opacity", 0.5).style("fill", "none");
         } else {
-          tourHold = center;
-          graphHold = [0, 3 * unit2Px];
+          tourLines[i].push({x:center[0], y:center[1]});
+          tourLine.push(fieldSVG.append("path").attr("d", lineFx(tourLines[i]))
+                        .style("stroke", tourColors[i]).style("stroke-width", 3).style("stroke-opacity", 0.5).style("fill", "none"));
+          graphLines[i].push({x:0, y:3 * unit2Px});
+          graphLine.push(graphSVG.append("path").attr("d", lineFx(graphLines[i]))
+                         .style("stroke", tourColors[i]).style("stroke-width", 3).style("stroke-opacity", 0.5).style("fill", "none"));
         }
-          tourLines[i].push(fieldSVG.append("line").attr("x1", tourHold[0]).attr("y1", tourHold[1])
-                             .attr("x2", tourists[i].x).attr("y2", tourists[i].y)
-                             .style("stroke", tourColors[i]).style("stroke-width", 2).style("stroke-opacity", 0.5));
-          graphLines[i].push(graphSVG.append("line").attr("x1", graphHold[0]).attr("y1", graphHold[1])
-                             .attr("x2", graphDots[i].attr("cx")).attr("y2", graphDots[i].attr("cy"))
-                             .style("stroke", tourColors[i]).style("stroke-width", 2).style("stroke-opacity", 0.5));
+      }
+
+      function PlayAnim() {
+        if (time > timeMax) {
+          clearInterval(projector);
+        } else {
+          for (i = 0; i < touristNum; i++) {
+            var who = tourists[i];
+            who.x = tourLines[i][time].x;
+            who.y = tourLines[i][time].y;
+            who.visual.attr("cx", who.x).attr("cy", who.y);
+            graphDots[i].attr("cx", graphLines[i][time].x).attr("cy", graphLines[i][time].y);
+          }
+          time++;
+          timeSlide.attr("x", (time / timeMax) * (31 / 8) * unit2Px);
+        }
       }
 
       //////////----------Initial Function Call----------//////////
